@@ -8,6 +8,7 @@ import lombok.NoArgsConstructor;
 import org.springframework.data.domain.Page;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Getter
 @NoArgsConstructor(access = AccessLevel.PROTECTED)
@@ -32,7 +33,7 @@ public class BoardPageResponseDTO {
                                    .contents(page.getContent()
                                                  .stream()
                                                  .map(BoardInfoDTO::toBoardPagingDTO)
-                                                 .toList())
+                                                 .collect(Collectors.toList()))
                                    .totalPage(page.getTotalPages())
                                    .totalElements(page.getTotalElements())
                                    .curPage(page.getNumber())
